2013-07-29 Fixed onEnd event in Video module
2013-07-26 Fixed problem with inline choice when selecting default value '---'
2013-07-26 Fixed problem with spaces in URL
2013-07-25 Added visibility commands in Standard Shapes module
2013-07-25 Added restoring visibility in Slideshow module
2013-07-22 Added 'Hide toolbar' property which hides default options toolbar and makes more space for text
2013-07-16 Fixed value change events in Table module gaps system
2013-07-05 Fixed a bug when event AllOk was sent even when wrong ranges were drawn
2013-07-05 Fixed problem when Check was not removing range end image in Line Number module
2013-07-04 Fixed problem when changing pages in Graph module
2013-07-04 Fixed drawing range bug in Line Number module
2013-07-03 Added Line Number module - used to draw X-axis ranges
2013-07-03 Updated Custom Scoring module icon
2013-07-02 Added event sending on playback finish to Video module
2013-07-01 Fixed problem with events from not activity gaps
2013-07-01 Fixed problem with disabled state for draggable gaps
2013-06-30 Improved performance in Slider module
2013-06-30 Fixed problem with Graph module loading
2013-06-29 Removed 'Show time' property from Video module
2013-06-28 Updated 3D Viewer module icon
2013-06-28 Fixed problem with audio resources in Slideshow module on Safari Mobile
2013-06-27 Added decimal separator property to Graph module
2013-06-27 Added jQuery CSV library
2013-06-26 Fixed focus problem in Paragraph module on Firefox browser
2013-06-26 Added command for obtaining current frame in Image Viewer module
2013-06-26 Added rotation and quality change commands to 3D Viewer module
2013-06-25 Fixed min/max validation in float validation in Commons (now in version 1.6.10)
2013-06-25 Added parsedValue property in float validation in Commons (now in version 1.6.9)
2013-06-24 Fixed labels visibility in Animation module
2013-06-24 Fixed float validation in Commons (now in version 1.6.8.)